[gd_scene load_steps=8 format=3 uid="uid://bciknmky3hp53"]

[ext_resource type="Script" path="res://scripts/active_reload.gd" id="1_sqy3r"]
[ext_resource type="Texture2D" uid="uid://dephb6x32b038" path="res://assets/ui/activereload/oval_bar.png" id="1_v4uum"]
[ext_resource type="Texture2D" uid="uid://bnwh4knf7qlkb" path="res://assets/ui/activereload/pin.png" id="2_wgjwj"]
[ext_resource type="Texture2D" uid="uid://bfypv5t8m3ah5" path="res://assets/ui/activereload/second_area.jpg.png" id="3_ayth1"]
[ext_resource type="Texture2D" uid="uid://df4q05q8g8vbj" path="res://assets/ui/activereload/pin_faded.png" id="3_b3jnn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8jsfn"]
radius = 11.0
height = 144.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdt4j"]
size = Vector2(170, 64)

[node name="ActiveReload" type="Node2D"]
position = Vector2(565, 280)
script = ExtResource("1_sqy3r")

[node name="Ovalbar" type="Sprite2D" parent="."]
texture = ExtResource("1_v4uum")

[node name="Pin" type="Area2D" parent="."]
position = Vector2(-424, 0)
collision_layer = 32
collision_mask = 32

[node name="PinFaded" type="Sprite2D" parent="Pin"]
texture = ExtResource("3_b3jnn")

[node name="PinSprite" type="Sprite2D" parent="Pin"]
texture = ExtResource("2_wgjwj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pin"]
shape = SubResource("CapsuleShape2D_8jsfn")

[node name="OuterSweetSpot" type="Area2D" parent="." groups=["Outer"]]
position = Vector2(301, 0)
scale = Vector2(0.6, 1)
collision_layer = 32
collision_mask = 32

[node name="Sprite2D" type="Sprite2D" parent="OuterSweetSpot"]
texture = ExtResource("3_ayth1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterSweetSpot"]
shape = SubResource("RectangleShape2D_sdt4j")

[node name="PinStart" type="Marker2D" parent="."]
position = Vector2(-421, 0)

[node name="PinEnd" type="Marker2D" parent="."]
position = Vector2(459, 0)

[connection signal="area_entered" from="Pin" to="." method="_on_pin_area_entered"]
[connection signal="area_exited" from="Pin" to="." method="_on_pin_area_exited"]
